--- a/style.css
+++ b/style.css
@@ -1,3 +1,115 @@
-body{
-    padding:20px;
+*{
+    margin:0;
+    font-family: Arial;
+    border:border-box;
+    /* border should be included inside our height and width length  */
 }
+.navbar{
+    height :60px;
+    background-color: #0f1111;
+    color:white;
+    display:flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.nav-logo{
+    height: 50px;
+    width:100px;
+}
+.logo{
+    background-image: url("amazon_logo.png");
+    height:50px;
+    width:100%;
+    background-size:cover;
+}
+.border{
+    border:2px solid trasparent;
+}
+.border:hover{
+    border:2px solid white;
+}
+.deliver_to{
+    color:#cccccc;
+    font-size: 0.8rem;
+    margin-left: 15px;
+
+}
+.india{
+    font-size:1rem;
+    margin-left:3px;
+   
+}
+.add-icon{
+    display:flex;
+    align-items:center;
+    
+    
+}
+.nav-search{
+    display: flex; 
+    justify-content: space-evenly;
+    /* justify-content: center;
+    align-items: center;  */
+    background-color: pink;
+    width:620px;
+    height:40px;
+    border-radius: 3px;
+}
+.nav-search:hover{
+    border:2px solid orange ;
+}
+.search-select{
+    background-color:#f3f3f3;
+    width:50px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    text-align: center;
+    border:none;
+    
+
+}
+.search-input{
+   width:100%; 
+   font-size:1 rem;
+   border:none;
+}
+.search-icon{
+    width:50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    background-color: orange;
+    color:black;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+span{
+    font-size:14px;
+} 
+.anl{
+    font-size:15px;
+    font-weight: 700;
+}
+.nav-cart i{
+    font-size:35px;
+  
+}
+.nav-cart{
+    height:45px;
+    width:70px;
+    font-weight:bold;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+
+}
+.cart{
+    font-size:0.85 rem;
+    font-weight:bold;
+
+}
+
+
+    
